[gd_scene load_steps=16 format=3 uid="uid://dhnqr06wwiyan"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_an2gy"]
[ext_resource type="Texture2D" uid="uid://0mhv501dkehq" path="res://assets/sprites/waddledee.png" id="2_xine6"]
[ext_resource type="PackedScene" uid="uid://drwkyi6oeajcr" path="res://scenes/enemy_hit.tscn" id="3_ecfmi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xt17h"]
atlas = ExtResource("2_xine6")
region = Rect2(86, 196, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ad2g"]
atlas = ExtResource("2_xine6")
region = Rect2(5, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdsq8"]
atlas = ExtResource("2_xine6")
region = Rect2(45, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltkr8"]
atlas = ExtResource("2_xine6")
region = Rect2(84, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql5qy"]
atlas = ExtResource("2_xine6")
region = Rect2(120, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xymen"]
atlas = ExtResource("2_xine6")
region = Rect2(159, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6her"]
atlas = ExtResource("2_xine6")
region = Rect2(195, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_p825q"]
atlas = ExtResource("2_xine6")
region = Rect2(233, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejxym"]
atlas = ExtResource("2_xine6")
region = Rect2(311, 71, 36, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_delme"]
atlas = ExtResource("2_xine6")
region = Rect2(347, 71, 36, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_qvfij"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt17h")
}],
"loop": true,
"name": &"hurt",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ad2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdsq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltkr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql5qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xymen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6her")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p825q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejxym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_delme")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g847b"]
radius = 9.05539

[node name="WaddleDee" type="Node2D"]
script = ExtResource("1_an2gy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qvfij")
animation = &"hurt"
autoplay = "walk"
frame_progress = 0.235619

[node name="EnemyHit" parent="." instance=ExtResource("3_ecfmi")]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHit"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_g847b")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(16, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 2)
target_position = Vector2(-12, 0)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="EnemyHit" method="_on_timer_timeout"]
